--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       <img src="https://i.imgur.com/76MJ9Wd.png" alt="Profile pic">
       <img src="https://i.imgur.com/76MJ9Wd.png" alt="Profile pic">
     </section>
+    <section>
+      <a href="">This is a link</a>
+    </section>
   </div>
 </body>
 </html>
